<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="password">密码</string>
    <string name="changepassword">修改密码</string>
    <string name="originalpassword">原密码</string>
    <string name="newpassword">新密码</string>
    <string name="againpassword">再次输入密码</string>
    <string name="gosearch" translatable="false">继续搜索</string>
    <string name="details">查看详情</string>
    <string name="stopsearch">停止搜索</string>
    <string name="nosearch">未搜索到局域网</string>
    <string name="zhinengchazuo_promat">连续按键3次，指示灯快闪</string>
    <string name="cha_zuo_2">智能插座</string>
    <string name="gateone">您的局域网未发现Massky</string>
    <string name="gatetwo">®</string>
    <string name="gatethree">网关</string>
    <string name="gatefour">您可以按以下方法来解决问题:</string>
    <string name="gatefive">1.请检查网关设备是否通电;</string>
    <string name="gatesix">2.网关设备与手机必须在同一个局域网</string>
    <string name="gateseven">3.网关设备故障灯是否闪烁</string>
    <string name="gateight">4.如未发现以上问题,请致电40012345678</string>
    <string name="gatedeta">添加网关</string>
    <string name="gatedone">网关ID</string>
    <string name="gatedtwo">自定义名称</string>
    <string name="gatedthree">网关密码</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="app_name">sraum</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新设备列表</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="photoalbum">从相册选取图片</string>
    <string name="camera">相机</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="getcode">获取验证码</string>
    <string name="kongtiao">空调</string>
    <string name="xinfeng">新风</string>
    <string name="dinuan">地暖</string>
    <string name="xinfeng_mode">新风模块</string>
    <string name="dinuan_mode">地暖模块</string>
    <string name="menci">门磁</string>
    <string name="rentiganying">人体感应</string>
    <string name="shuijin">水浸检测器</string>
    <string name="pm_ruqiang">入墙PM2.5</string>
    <string name="jinjin_btn">紧急按钮</string>
    <string name="kaiguan">开关</string>
    <string name="light_promat">快速连续按A键三次，在快速连续按B键三次，直到蓝灯连续闪烁3次</string>
    <string name="zigbee_promat">请将电池绝缘片拨出后，长按设备组网2秒，直至绿灯快闪。</string>
    <string name="hongwai">红外转发器</string>
    <string name="jiuzuo">久坐报警器</string>
    <string name="smoke_alarm">烟雾报警器</string>
    <string name="gas_alarm">天然气报警器</string>
    <string name="pm25_in_wall">PM2.5入墙</string>
    <string name="pm25_rubik">PM2.5魔方</string>
    <string name="smart_lock">智能门锁</string>
    <string name="dc_mini">直流电阀机械手</string>
    <string name="yijianlight">一键灯控</string>
    <string name="liangjianlight">两键灯控</string>
    <string name="sanjianlight">三键灯控</string>
    <string name="sijianlight">四键灯控</string>
    <string name="yilutiaoguang">一调光三灯控</string>
    <string name="lianglutiaoguang">二调光二灯控</string>
    <string name="sanlutiao">三调光一灯控</string>
    <string name="window_panel">二窗帘一灯控</string>
    <string name="yilutiaoguang1">一路调光</string>
    <string name="lianglutiaoguang1">两路调光</string>
    <string name="sanlutiao1">三路调光</string>
    <string name="window_panel1">窗帘面板</string>
    <string name="air_panel">空调面板</string>
    <string name="yanwu">烟雾报警器</string>
    <string name="tianranqi">天然气报警器</string>
    <string name="zhineng">智能门锁</string>
    <string name="pm25">PM2.5</string>
    <string name="duogongneng">多功能模块</string>
    <string name="jixieshou">机械手</string>
    <string name="air_mode">空调模块</string>
    <string name="air_model">空调模块</string>
    <string name="yijianlight_promat">连续按A键3次，在连续按B键3次，指示灯快闪。</string>
    <string name="zigbee_other_promat">用针桶小孔，长按设备组网键2秒，绿灯快闪</string>
    <string name="zigbee_promat_btn_down">长按设备组网2秒，绿灯快闪</string>
    <string name="shexiangtou">摄像头</string>
    <string name="pm_mofang">PM魔方</string>
    <string name="yaokongqi">遥控器</string>
    <string name="dianshiji">电视机</string>
    <string name="light_panel">灯控面板</string>
    <string name="wangguan">网关</string>
    <string name="chuanglian">窗帘面板</string>
    <string name="dianzimao">电子猫眼</string>
    <string name="zhinengcamera">智能摄像头</string>
    <string name="yinyuepanel">音乐面板</string>
    <string name="one_light_control">一调光一灯控</string>
    <string name="two_light_control">一调光二灯控</string>
    <string name="three_light_control">一调光三灯控</string>
    <string name="two_dimming_one_control">二调光一灯控</string>
    <string name="two_dimming_two_control">二调光二灯控</string>
    <string name="two_dimming_trhee_control">三调光一灯控</string>
    <string name="keshimenling">可视门铃</string>
    <string name="tuisongtongzhi">推送通知</string>
    <string name="touyingyi">投影仪</string>
    <string name="yinxiang">音响</string>
    <string name="wifi_camera">WIFI摄像头</string>
    <string name="wifi_hongwai">WIFI红外转发</string>
    <string name="cha_zuo">86插座两位</string>
    <string name="cha_zuo_1">入墙式智能插座</string>
    <string name="connect">连接</string>
    <string name="see_mode">预览模式</string>
    <string name="locat_video">本地视频</string>
    <string name="chang_pwd">修改密码</string>
    <string name="sensorsetting">传感器设置</string>
    <string name="sd_record">TF卡远程录像</string>
    <string name="out_sensor">退出对码</string>
    <string name="sensorcodeing">对码状态中...</string>
    <string name="rmone">卧室调光灯</string>
    <string name="rmtwo">客厅灯</string>
    <string name="rmthree">卧室空调</string>
    <string name="rmfour">卧室窗帘</string>
    <string name="rmfive">卫浴灯</string>
    <string name="rmsix">卫浴灯</string>
    <string name="rmseven">客厅空调</string>
    <string name="rmeight">厨房灯</string>
    <string name="rmnine">客厅窗帘</string>
    <string name="open_door_lock">打开远程开关至\"on\"</string>
    <string name="open_door_lock_txt">设备通电状态下，请按步骤操作您的智能锁屏幕</string>
    <string name="open_door_lock_txt_one">长按\"管理员键\"至屏幕亮起</string>
    <string name="open_door_lock_txt_two">输入管理员密码，默认888888</string>
    <string name="open_door_lock_txt_three">进入\"系统设置\"</string>
    <string name="open_door_lock_txt_four">进入\"安全设置\"</string>
    <string name="open_door_lock_txt_five">按照下图所示设置并进入\"Zigbee指令\"</string>
    <string name="open_door_lock_txt_six">选择\"Zigee入网\"</string>
    <string name="open_door_lock_txt_result">等待加入网关</string>
    <string name="aboutone">产品介绍</string>
    <string name="abouttwo">使用帮助</string>
    <string name="aboutthree">意见反馈</string>
    <string name="aboutfour">服务条款</string>
    <string name="aboutfive">开发人员</string>
    <string name="aboutsix">版本更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_updating">正在更新</string>
    <string name="remote_video_title">远程录像</string>
    <string name="no_video">没有远程录像文件</string>
    <string name="remote_video_getparams">正在获取远程录像信息...</string>
    <string name="remote_video_offline">摄像机不在线, 无法播放远程录像</string>
    <string name="remote_start_prompt">开始日期不能大于结束日期</string>
    <string name="remote_end_prompt">结束日期不能小于开始日期</string>
    <string name="remote_to">至</string>
    <string name="stopplay_alert">结束播放?</string>
    <string name="camera_type_mjpeg">MJPEG</string>
    <string name="camera_type_h264">H.264</string>
    <string name="h264_main_stream">H.264主码流</string>
    <string name="h264_sub_stream">H.264次码流</string>
    <string name="mjpeg_sub_stream">MJPEG码流</string>
    <string name="mjpeg_h264_stream">H.264码流</string>
    <string name="choose_stream">选择码流</string>
    <string name="p2p_view_time_out">已到观看时间</string>
    <string name="p2p_relay_mode_time_out">转发模式观看,剩余时间:</string>
    <string name="str_second">秒</string>
    <string name="ptz_takepic_ok">拍照成功</string>
    <string name="ptz_takepic_fail">拍照失败</string>
    <string name="ptz_default_vedio_params">视频参数恢复默认值</string>
    <string name="ptz_control">请按菜单键,进行云台控制</string>
    <string name="ptz_takepic_save_fail">该设备没有SDCard,照片保存失败</string>
    <string name="ptz_takevideo_begin">开始录像</string>
    <string name="ptz_takevideo_end">录像结束</string>
    <string name="main_model_show_tost_connection">请连接上再操作</string>
    <string name="main_model_u">U盘模式</string>
    <string name="main_model_pre">预览模式</string>
    <string name="main_model_video">系统设置</string>
    <string name="video_model_ing">录像中....</string>
    <string name="bingding_wifi">Wifi</string>
    <string name="save_user">保存ID用户名密码</string>
    <string name="unbind_wifi">未绑定Wifi</string>
    <string name="main_model_name">奥尼行车记录仪</string>
    <string name="bingding_wifi_sucess">绑定成功</string>
    <string name="eixt_show_toast">本地录像中，请先停止再退出！</string>
    <string name="login_stuta">连接状态</string>
    <string name="play_cuting">切换中...</string>
    <string name="cuting_u">进入U盘</string>
    <string name="cuting_pre">进入预览</string>
    <string name="loct_file_video">手机录像文件</string>
    <string name="tf_file_video_loading">远程下载文件</string>
    <string name="local_video_play_over">播放结束</string>
    <string name="ptz_takevideo_time_show">文件损坏</string>
    <string name="intent_show_toast">本地录像中，请先停止再进入U盘模式！</string>
    <string name="add_check_phone">手机录像文件</string>
    <string name="add_check_load">远程下载文件</string>
    <string name="select_list">时间搜索</string>
    <string name="shuxin_wifi">扫描Wifi</string>
    <string name="videoing">录像中...</string>
    <string name="show_toast_videoing">正在录像，请先停止再切换！</string>
    <string name="show_toat_buzhi">此设备不支持二维码扫描！</string>
    <string name="login_stuta_camer">相机状态</string>
    <string name="exit_show">   提示：</string>
    <string name="exit_qu">删除本地文 件</string>
    <string name="exit_qu_show">取 消</string>
    <string name="exit_play_show">确认退出播放?</string>
    <string name="exit_chenxu_show">确认退出程序?</string>
    <string name="others">其他</string>
    <string name="others_setting_currentinfo">当前设备信息:</string>
    <string name="others_local_appver">当前界面固件:</string>
    <string name="others_check_update">固件更新</string>
    <string name="others_setting_servernewinfo">最新设备信息:</string>
    <string name="video_mode">录像模式:</string>
</resources>