<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:id="@+id/linear_popcamera"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/cameratop_id"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rectangleradiu">
        <Button
            android:id="@+id/photoalbum"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:layout_weight="1"
            android:text="@string/photoalbum"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/e0"/>
        <Button
            android:id="@+id/camera_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/camera"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/cancelbtn_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangleradiu"/>
    </LinearLayout>
</LinearLayout>