<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F7FA"
    android:orientation="vertical">

    <com.yanzhenjie.statusview.StatusView
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:fitsView="@+id/root_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingRight="20dp"
            android:src="@drawable/icon_t_back" />

        <TextView
            android:id="@+id/toolbar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="文字报警"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:id="@+id/wode_setting"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:src="@drawable/wode_setting"/>-->
    </RelativeLayout>
    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/x80"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:src="@mipmap/ic_launcher"/>-->
    <com.massky.sraum.view.SycleSearchView
        android:id="@+id/sycle_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x60" />

    <RelativeLayout
        android:id="@+id/rel_list_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_show_rev_item"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/search_txt"
            android:layout_marginTop="15dp"
            android:cacheColorHint="#00000000"
            android:divider="#E3E3E3"
            android:dividerHeight="1dp"></ListView>

        <TextView
            android:id="@+id/search_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y15"
            android:text="@string/nosearch"
            android:textColor="@color/e30"
            android:textSize="12sp" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/goimage_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/consearchh" />

            <TextView
                android:id="@+id/gotext_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y5"
                android:text="@string/gosearch"
                android:textColor="@color/e30"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detailimage_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/moreh" />

            <TextView
                android:id="@+id/details_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y5"
                android:text="@string/details"
                android:textColor="@color/e30"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/stopimage_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stoph" />

            <TextView
                android:id="@+id/stopsearch_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y5"
                android:text="@string/stopsearch"
                android:textColor="@color/e30"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fangdajing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y8"
            android:visibility="gone"
            android:src="@drawable/img_fangdajing" />

        <LinearLayout
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y15"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/x5"
            android:paddingRight="@dimen/x5"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/y8"
                android:paddingBottom="@dimen/y8"
                android:text="FUL1234567890"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:paddingTop="@dimen/y8"
                android:paddingBottom="@dimen/y8"
                android:text="客厅"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/y8"
                android:paddingBottom="@dimen/y8"
                android:text="FUL1234567890"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>