<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include layout="@layout/backtitle" android:visibility="gone"/>
    <com.yanzhenjie.statusview.StatusView
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:fitsView="@+id/root_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/status_view"
        android:background="@color/green">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:src="@drawable/icon_t_back" />

        <TextView
            android:id="@+id/project_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/next_step_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="保存"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

    <com.massky.sraum.view.ClearEditText
        android:id="@+id/originalpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:layout_marginLeft="@dimen/p80"
        android:layout_marginRight="@dimen/p91"
        android:layout_marginTop="@dimen/p240"
        android:background="@null"
        android:hint="@string/originalpassword"
        android:paddingRight="@dimen/x5"
        android:inputType="textPassword"
        android:paddingTop="@dimen/y15"
        android:textColor="@color/c6f"
        android:textSize="12sp" />

    <View
        android:id="@+id/linetone"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/originalpassword"
        android:layout_marginLeft="@dimen/p50"
        android:layout_marginRight="@dimen/p50"
        android:layout_marginTop="@dimen/p17"
        android:background="@color/ea" />

    <ImageView
        android:id="@+id/eyeone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/p50"
        android:layout_marginTop="@dimen/p312"
        android:src="@drawable/eyeclose" />

    <com.massky.sraum.view.ClearEditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:layout_below="@+id/linetone"
        android:layout_marginLeft="@dimen/p80"
        android:layout_marginRight="@dimen/p96"
        android:background="@null"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:paddingRight="@dimen/x5"
        android:paddingTop="@dimen/y15"
        android:textColor="@color/c6f"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/eyetwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linetone"
        android:layout_marginRight="@dimen/p50"
        android:layout_marginTop="@dimen/y15"
        android:src="@drawable/eyeclose" />

    <View
        android:id="@+id/linettwo"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/newpassword"
        android:layout_marginLeft="@dimen/p50"
        android:layout_marginRight="@dimen/p50"
        android:layout_marginTop="@dimen/p17"
        android:background="@color/ea" />

    <com.massky.sraum.view.ClearEditText
        android:id="@+id/againpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y30"
        android:layout_below="@+id/linettwo"
        android:layout_marginLeft="@dimen/p80"
        android:layout_marginRight="@dimen/p91"
        android:background="@null"
        android:hint="@string/againpassword"
        android:inputType="textPassword"
        android:paddingTop="@dimen/y15"
        android:textColor="@color/c6f"
        android:paddingRight="@dimen/x5"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/eyethree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linettwo"
        android:layout_marginRight="@dimen/p55"
        android:layout_marginTop="@dimen/p63"
        android:src="@drawable/eyeclose" />

    <View
        android:id="@+id/linetthree"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/againpassword"
        android:layout_marginLeft="@dimen/p50"
        android:layout_marginRight="@dimen/p50"
        android:layout_marginTop="@dimen/p17"
        android:background="@color/ea" />

    <!--<Button-->
        <!--android:id="@+id/completebtn_id"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/d30"-->
        <!--android:layout_below="@+id/linetthree"-->
        <!--android:layout_marginLeft="@dimen/d30"-->
        <!--android:layout_marginRight="@dimen/d30"-->
        <!--android:layout_marginTop="@dimen/d80"-->
        <!--android:background="@drawable/findbtn"-->
        <!--android:text="@string/completepass"-->
        <!--android:textSize="@dimen/s13" />-->


    <androidx.percentlayout.widget.PercentRelativeLayout
        android:id="@+id/upgrade_rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/completebtn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y30"
            android:height="@dimen/y30"
            android:background="@drawable/add_zigbee_device_btn"
            android:text="完成"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_widthPercent="80%" />
    </androidx.percentlayout.widget.PercentRelativeLayout>
</RelativeLayout>